--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: 钱 梦良
 description: "An Integrated Scientific Blogging Template"
-url: "https://projectpages.github.io"
+url: " "
 
 
 
 
 # Secondary Parameters
-baseurl: "/project-pages"
+baseurl: " "
 header-img: img/home-bg.jpg
 headercolor: "#FFFFFF"
 logo: /project-pages/img/logos/Project-Pages-New-Logo-Inverted.png
